# suchef-orders-bot

./: .env  main.py  pyproject.toml  requirements.txt
src/: config.py  utils.py
src/api/: logger.py  service.py
src/app/: app.py  bot.py  lifespan.py  logger.py
src/app/routers/: auth.py  order_status.py  start.py
src/app/schemas/: order.py  user.py  utils.py
src/app/statics/text/statuses/: Принят оператором Самовывоз.txt
src/broadcast/: app.py  callback.py  order_status.py  send.py
src/broadcast/rmq/: consumer.py
src/database/: context.py  logger.py  service.py
src/database/models/: user.py
src/message/: base.py  utils.py
src/message/order/: base.py  message.py  status.py  statuses.py
src/messages/: base.py
src/messages/order_status/: statuses.py
